<resources>
    <string name="app_name">Movie &amp; Tv Show Catalogue</string>
    <string name="title_movies">Movies</string>
    <string name="title_tv">Tv Show</string>
    <string name="title_fav">Favorite</string>

    <string name="movie_poster">Movie Poster</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_release">Movie Release</string>
    <string name="overview">Overview</string>

    <string name="tv_show_poster">Tv Show Poster</string>
    <string name="release_title">Release</string>
    <string name="overview_title">Overview</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="tab_title_tv">Tv Show</string>
    <string name="tab_title_movie">Movie</string>
    <string name="favorite_movie_poster">Favorite Movie Poster</string>
    <string name="delete">Delete</string>
    <string name="favorite">Favorite</string>
    <string name="back_poster">Back poster</string>

    <string name="search">Search</string>
    <string name="search_movie">Search Movie</string>
    <string name="title_search">Search</string>
    <string name="search_tvShow">Search Tv Show</string>

    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">No Data</string>
    <string name="poster_widget">Poster Widget</string>

    <string name="notification_settings">Notifications Settings</string>
    <string name="language_settings">Language Setting</string>

    <string name="daily_reminder">Daily Reminder</string>
    <string name="daily_reminder_notification">Daily Notification</string>
    <string name="daily_reminder_notification_message">Check your favorite movie and tv show now!</string>

    <string name="daily_release">New Movie Release</string>
    <string name="daily_release_notification">New Release Notification</string>
    <string name="daily_release_notification_message">Let\'s check out new release movie today\'s</string>

    <string name="settings">Settings</string>
    <string name="change_language">Change Language</string>

</resources>
