<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/notification_settings"
        app:icon="@drawable/ic_notifications_white_24dp">

        <SwitchPreferenceCompat
            app:key="daily_reminder"
            app:title="@string/daily_reminder" />

        <SwitchPreferenceCompat
            app:key="daily_release"
            app:title="@string/daily_release" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/language_settings"
        android:icon="@drawable/ic_settings_white_24dp">

        <Preference
            app:key="change_language"
            app:title="@string/change_language"/>

    </PreferenceCategory>

</PreferenceScreen>